# master/controllers/PermissionRoleController.go
@@ -15,6 +15,9 @@ import (
 // @Produce json
 // @Param requestBody body models.PermissionRole true "Permissioan Role credentials in JSON format"
 // @Success 201 {object} models.PermissionRole
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/permission-role [post]
 func CreatePermissionRole(c *fiber.Ctx) error {
 	PermissionRole := new(models.PermissionRole)
@@ -45,6 +48,9 @@ func CreatePermissionRole(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Success 201 {object} models.PermissionRole
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/permission-role [get]
 func GetAllPermissionRoles(c *fiber.Ctx) error {
 	var PermissionRole []models.PermissionRole
@@ -73,6 +79,9 @@ func GetAllPermissionRoles(c *fiber.Ctx) error {
 // @Produce json
 // @Param id path string true "PermissionRole ID"
 // @Success 201 {object} models.PermissionRole
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/permission-role/{id} [get]
 func GetPermissionRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -102,6 +111,9 @@ func GetPermissionRoleById(c *fiber.Ctx) error {
 // @Produce json
 // @Param id path string true "PermissionRole ID"
 // @Success 201 {object} models.PermissionRole
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/permission-role/{id} [post]
 func UpdatePermissionRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -148,6 +160,9 @@ func UpdatePermissionRoleById(c *fiber.Ctx) error {
 // @Produce json
 // @Param id path string true "PermissionRole ID"
 // @Success 201 {object} models.PermissionRole
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/permission-role/{id} [delete]
 func DeletePermissionRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
