# master/controllers/RoleController.go
@@ -15,6 +15,9 @@ import (
 // @Produce json
 // @Param requestBody body models.Role true "User credentials in JSON format"
 // @Success 201 {object} models.Role
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/Role [post]
 func CreateRole(c *fiber.Ctx) error {
 	Role := new(models.Role)
@@ -45,6 +48,9 @@ func CreateRole(c *fiber.Ctx) error {
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} models.Role
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/role [get]
 func GetAllRoles(c *fiber.Ctx) error {
 	var Role []models.Role
@@ -73,6 +79,9 @@ func GetAllRoles(c *fiber.Ctx) error {
 // @Param id path string true "Role ID"
 // @Success 200 {object} map[string]interface{} "success"
 // @Failure 404 {object} map[string]interface{} "Role tidak ditemukan"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/role/{id} [get]
 func GetRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -102,6 +111,9 @@ func GetRoleById(c *fiber.Ctx) error {
 // @Param id path string true "Role ID"
 // @Success 200 {object} map[string]interface{} "success"
 // @Failure 404 {object} map[string]interface{} "Role tidak ditemukan"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/role/{id} [get]
 func UpdateRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -151,6 +163,9 @@ func UpdateRoleById(c *fiber.Ctx) error {
 // @Success 200 {object} map[string]interface{} "Berhasil Menghapus Data"
 // @Failure 404 {object} map[string]interface{} "Role tidak ditemukan"
 // @Failure 500 {object} map[string]interface{} "Gagal menghapus data role"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/roles/{id} [delete]
 func DeleteRoleById(c *fiber.Ctx) error {
 	db := database.GetDB()
