# master/controllers/UserController.go
@@ -41,7 +41,6 @@ func CreateUser(c *fiber.Ctx) error {
 }
 
 // GetAllUsers godoc
-// @Security BasicAuth
 // @Tags Users
 // @Summary Get all users
 // @Description Get details of all users
@@ -50,6 +49,9 @@ func CreateUser(c *fiber.Ctx) error {
 // @Produce  json
 // @Success 200 {array} models.User
 // @Router /api/users [get]
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 func GetAllUsers(c *fiber.Ctx) error {
 	var users []models.User
 
@@ -77,6 +79,9 @@ func GetAllUsers(c *fiber.Ctx) error {
 // @Param id path string true "User ID"
 // @Success 200 {object} map[string]interface{} "success"
 // @Failure 404 {object} map[string]interface{} "User tidak ditemukan"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/users/{id} [get]
 func GetUserById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -109,6 +114,9 @@ func GetUserById(c *fiber.Ctx) error {
 // @Failure 404 {object} map[string]interface{} "User tidak ditemukan"
 // @Failure 400 {object} map[string]interface{} "Invalid JSON"
 // @Failure 500 {object} map[string]interface{} "Gagal melakukan pembaruan"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/users/update/{id} [post]
 func UpdateUserById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -158,6 +166,9 @@ func UpdateUserById(c *fiber.Ctx) error {
 // @Success 200 {object} map[string]interface{} "Berhasil Menghapus Data"
 // @Failure 404 {object} map[string]interface{} "User tidak ditemukan"
 // @Failure 500 {object} map[string]interface{} "Gagal menghapus data pengguna"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/users/delete/{id} [delete]
 func DeleteUserById(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -190,6 +201,9 @@ func DeleteUserById(c *fiber.Ctx) error {
 // @Produce json
 // @Param requestBody body middleware.LoginField true "User credentials in JSON format"
 // @Success 201 {object} middleware.JWT
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/login [post]
 func LoginUser(c *fiber.Ctx) error {
 	db := database.GetDB()
@@ -279,6 +293,9 @@ func saveSession(c *fiber.Ctx, userId int, token string) error {
 // @Accept json
 // @Produce json
 // @Param requestBody body middleware.JWT true "User credentials in JSON format"
+// @Security ApiKeyAuth
+// @Security Bearer
+// @param Authorization header string true "Authorization"
 // @Router /api/logout [DELETE]
 func DeleteSessionByToken(c *fiber.Ctx) error {
 	// Membuka koneksi ke database
